<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>fi.vm.sade.koodisto</groupId>
	<artifactId>koodisto</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>Koodisto :: Parent</name>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<flyway.user>app</flyway.user>
		<flyway.password>ophoph</flyway.password>
		<flyway.url>jdbc:postgresql://localhost:5432/koodisto</flyway.url>
		<flyway.baselineOnMigrate>true</flyway.baselineOnMigrate>
		<sonar.organization>opetushallitus</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.coverage.jacoco.xmlReportPaths>**/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<modules>
		<!-- <module>koodisto-audit</module> -->
		<module>koodisto-service</module>
		<module>koodisto-api</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<type>pom</type>
				<version>2.6.3</version>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>8.5.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>oph-sade-artifactory</id>
			<name>oph-sade-artifactory-releases</name>
			<url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
		</repository>
		<snapshotRepository>
			<id>oph-sade-artifactory</id>
			<name>oph-sade-artifactory-snapshots</name>
			<url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>oph-sade-artifactory-snapshots</id>
			<url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>oph-sade-artifactory-releases</id>
			<url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
		</repository>
	</repositories>
<build>
	<plugins>
		<plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>0.8.7</version>
			<executions>
				<execution>
					<goals>
						<goal>prepare-agent</goal>
					</goals>
				</execution>
				<!-- attached to Maven test phase -->
				<execution>
					<id>report</id>
					<phase>test</phase>
					<goals>
						<goal>report</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
	</plugins>
</build>

</project>
